--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -61,7 +61,7 @@
 
 			<div class="md-whiteframe-8dp sidebar form" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="25" layout-align="start start" ng-attr-style="z-index: 1; min-height: 200px; background-color: {{base_hue_lightest.value}}; padding: 0;">
 				<md-card ng-attr-style="background: {{base_hue_lightest.value}}; width: 100%; position: relative; margin: 0;">
-	                <form name="spotlight">
+	                <form name="spotlightForm">
 	                	<div style="text-align: left; padding-left: 16px; border-left: 4px solid {{primary_hue_normal.value}}; box-sizing: border-box;">
 	                		<h1 style="color: {{primary_hue_normal.value}};">Contact mma Today!</h1>
 	                	</div>
@@ -70,7 +70,7 @@
 	                            <md-input-container class="md-block lightweight-md-input">
 	                                <label>Full Name</label>
 	                                <input name="name" ng-model="spotlight_page_contact_form.name" minlength="4" required>
-	                                <div ng-messages="spotlight.name.$error" ng-show="spotlight.name.$dirty">
+	                                <div ng-messages="spotlightForm.name.$error" ng-show="spotlightForm.name.$dirty">
 	                                    <div ng-message="required">Name required!</div>
 	                                    <div ng-message="minlength">Name too short!</div>
 	                                </div>
@@ -80,7 +80,7 @@
 	                            <md-input-container class="md-block lightweight-md-input">
 	                                <label>Email</label>
 	                                <input type="email" name="email" ng-model="spotlight_page_contact_form.email" required>
-	                                <div ng-messages="spotlight.email.$error" ng-show="spotlight.email.$dirty">
+	                                <div ng-messages="spotlightForm.email.$error" ng-show="spotlightForm.email.$dirty">
 	                                    <div ng-message="required">Email required!</div>
 	                                    <div ng-message="email">Enter a valid email!</div>
 	                                </div>
@@ -90,7 +90,7 @@
                                 <md-input-container class="md-block lightweight-md-input">
                                     <label>Phone</label>
                                     <input ng-model="spotlight_page_contact_form.phone" ng-pattern="/^[(]{0,1}[0-9]{3}[)]{0,1}[-\s\.]{0,1}[0-9]{3}[-\s\.]{0,1}[0-9]{4}$/" name="phone" minlength="10" required>
-                                    <div ng-messages="spotlight.phone.$error" ng-show="spotlight.phone.$dirty">
+                                    <div ng-messages="spotlightForm.phone.$error" ng-show="spotlightForm.phone.$dirty">
                                         <div ng-message="required">Phone number required!</div>
                                         <div ng-message="minlength">Phone number too short!</div>
                                         <div ng-message="pattern">Not a valid phone number!</div>
@@ -101,7 +101,7 @@
 	                        	<md-input-container class="md-block lightweight-md-input" flex>
 	                                <label>Message</label>
 	                                <textarea name="message" md-detect-hidden="true" ng-model="spotlight_page_contact_form.message" rows="3" minlength="10" md-maxlength="250" required></textarea>
-	                                <div ng-messages="spotlight.message.$error" ng-show="spotlight.message.$dirty">
+	                                <div ng-messages="spotlightForm.message.$error" ng-show="spotlightForm.message.$dirty">
 	                                    <div ng-message="required">Message required!</div>
 	                                    <div ng-message="minlength">Message too short!</div>
 	                                    <div ng-message="md-maxlength">Message too long!</div>
@@ -109,7 +109,7 @@
 	                            </md-input-container>
 	                        </md-list-item>
 	                    </md-card-content>
-	                    <md-button ng-click="sendLead(spotlight_page_contact_form, spotlightPage.data.title); clearForm(spotlight)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
+	                    <md-button ng-click="sendLead(spotlight_page_contact_form, spotlightPage.data.title); clearForm(Form)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
 					        <md-icon style="color: {{base_hue_lighter.value}};">send</md-icon>
 					    </md-button>
 	                </form>
