Uppercase Aerial Mapping

--- a/lib/client/app/application/landing/partials/section_1.html
+++ b/lib/client/app/application/landing/partials/section_1.html
@@ -119,7 +119,7 @@ md-card.section-1-ms-explorer {min-height: 600px;}
 										<md-icon style="width: 64px; height: 64px;" md-svg-src="media/drone.svg">
 										</md-icon>
 										<br><br>
-										<span class="md-title">Aerial Mapping</span>
+										<span class="md-title">AERIAL MAPPING</span>
 									</md-card-header-text>
 								</md-card-header>
 								</a>
