--- a/lib/client/app/application/pages/team/partials/team-template.html
+++ b/lib/client/app/application/pages/team/partials/team-template.html
@@ -17,11 +17,11 @@
 
 		<div ng-include src="'application/partials/navigation-menu.html'"></div>
 
-	    <div class="interior-page" flex="100" layout="row" layout-wrap layout-align="start start" layout-wrap style="width: 100%;">
+	    <div class="interior-page" flex="100" layout="row" layout-wrap layout-align="space-around start" layout-wrap style="width: 100%;">
 	    	<div flex="100" style="text-align: center; margin-top: 64px; z-index: 2">
 				<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Our People</h1>
 			</div>
-	    	<md-card class="md-whiteframe-6dp" flex="100" flex-sm="33" flex-gt-sm="25" ng-repeat="member in settings.staff.members">
+	    	<md-card class="md-whiteframe-6dp" flex="100" flex-sm="33" flex-gt-sm="30" ng-repeat="member in settings.staff.members">
 	    		<img ng-src="{{member.source || '/assets/design/missing-person-image.gif'}}" class="md-card-image" alt="Washed Out">
 	    	</md-card>
 		</div>
