--- a/lib/client/app/application/pages/team/partials/team-template.html
+++ b/lib/client/app/application/pages/team/partials/team-template.html
@@ -21,12 +21,32 @@
 	    	<div flex="100" style="text-align: center; margin-top: 64px; z-index: 2">
 				<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Our People</h1>
 			</div>
-	    	<md-card class="md-whiteframe-6dp" flex="100" flex-sm="33" flex-gt-sm="30" ng-repeat="member in settings.staff.members">
-	    		<img ng-src="{{member.source || '/assets/design/missing-person-image.gif'}}" class="md-card-image" alt="Washed Out">
+	    	<md-card class="md-whiteframe-6dp" flex="100" flex-sm="33" flex-gt-sm="30" ng-repeat="member in settings.staff.members" ng-click="select_member(member);">
+	    		<img ng-src="{{member.source || '/assets/design/missing-person-image.gif'}}" class="md-card-image" alt="Team Member {{member.name}}">
 	    	</md-card>
 		</div>
 
+		<!-- Dialog Component -->
+		<div layout="row" layout-align="center center" layout-wrap ng-attr-style="width: {{window_width}}px; height: {{window_height}}px; position: fixed; top: 0; left: 0; overflow-y: auto; background: rgba(0, 0, 0, 0.7); z-index: 10000;" ng-show="show_dialog">
+			<md-card class="md-whiteframe-6dp" flex="100" layout="row" layout-wrap>
+				<div flex="50">
+	    			<img ng-src="{{team_member.source || '/assets/design/missing-person-image.gif'}}" class="md-card-image" alt="Team member {{team_member.name}}">
+	    		</div>
+	    		<div flex="50">
+		    		<h4>{{team_member.title || 'Position | Title'}}</h4>
+			    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic;">Q: What do you find rewarding?</h5>
+			    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[0] || "I'm busy doing just that..."}}</p>
+			    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic;">Q: What was your first job?</h5>
+			    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[1] || "I'll get back to you!"}}</p>
+			    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic;">Q: Provide one fun fact about yourself!</h5>
+			    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[2] || 'This is where things will get interesting...'}}</p>
+	    		</div>
+	    	</md-card>
+		</div>
+		<!-- Dialog Component -->
+
 	</section>
+
 	<!-- Footer -->
 	<div ng-include src="'application/partials/footer.html'"></div>
 	<!-- Footer -->
