--- a/lib/client/app/application/pages/team/partials/team-template.html
+++ b/lib/client/app/application/pages/team/partials/team-template.html
@@ -28,18 +28,22 @@
 
 		<!-- Dialog Component -->
 		<div layout="row" layout-align="center center" layout-wrap ng-attr-style="width: {{window_width}}px; height: {{window_height}}px; position: fixed; top: 0; left: 0; overflow-y: auto; background: rgba(0, 0, 0, 0.7); z-index: 10000;" ng-show="show_dialog">
+			<i class="material-icons" ng-attr-style="cursor: pointer; position: absolute; top: 16px; right: 16px; color: {{base_hue_darkest.value}};" ng-click="$parent.show_dialog = false">close</i>
 			<md-card class="md-whiteframe-6dp" flex="100" layout="row" layout-wrap>
 				<div flex="50">
-	    			<img ng-src="{{team_member.source || '/assets/design/missing-person-image.gif'}}" class="md-card-image" alt="Team member {{team_member.name}}">
+	    			<img ng-src="{{team_member.source || '/assets/design/missing-person-image.gif'}}" class="md-card-image" alt="Team member {{team_member.name}}" style="height: 100%; width: auto;">
 	    		</div>
-	    		<div flex="50">
-		    		<h4>{{team_member.title || 'Position | Title'}}</h4>
-			    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic;">Q: What do you find rewarding?</h5>
-			    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[0] || "I'm busy doing just that..."}}</p>
-			    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic;">Q: What was your first job?</h5>
-			    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[1] || "I'll get back to you!"}}</p>
-			    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic;">Q: Provide one fun fact about yourself!</h5>
-			    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[2] || 'This is where things will get interesting...'}}</p>
+	    		<div flex="50" layout="row" layout-align="center center">
+	    			<div>
+	    				<h1 ng-attr-style="color: {{base_hue_darkest.value}}; margin-top: 16px; margin-bottom: 16px;">{{team_member.name || 'Team Member\'s Name'}}</h1>
+			    		<h1 ng-attr-style="color: {{base_hue_darkest.value}}; margin-top: 16px; margin-bottom: 16px;">{{team_member.title || 'Position | Title'}}</h1>
+				    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic; font-size: 24px; margin-top: 16px; margin-bottom: 16px;">Q: What do you find rewarding?</h5>
+				    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[0] || "I'm busy doing just that..."}}</p>
+				    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic; font-size: 24px; margin-top: 16px; margin-bottom: 16px;">Q: What was your first job?</h5>
+				    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[1] || "I'll get back to you!"}}</p>
+				    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic; font-size: 24px; margin-top: 16px; margin-bottom: 16px;">Q: Provide one fun fact about yourself!</h5>
+				    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[2] || 'This is where things will get interesting...'}}</p>
+			    	</div>
 	    		</div>
 	    	</md-card>
 		</div>
