team member page

--- a/lib/client/app/application/pages/team/partials/team-template.html
+++ b/lib/client/app/application/pages/team/partials/team-template.html
@@ -35,8 +35,8 @@
 	    		</div>
 	    		<div flex="100" flex-gt-sm="50" layout="row" layout-align="center center">
 	    			<div>
-	    				<h1 ng-attr-style="color: {{base_hue_darkest.value}}; margin-top: 16px; margin-bottom: 16px;">{{team_member.name || 'Team Member\'s Name'}}</h1>
-			    		<h1 ng-attr-style="color: {{base_hue_darkest.value}}; margin-top: 16px; margin-bottom: 16px;">{{team_member.title || 'Position | Title'}}</h1>
+	    				<h5 ng-attr-style="color: {{base_hue_darkest.value}}; font-size: 24px; margin-top: 16px; margin-bottom: 16px;">{{team_member.name || 'Team Member\'s Name'}}</h5>
+			    		<h5 ng-attr-style="color: {{base_hue_darkest.value}}; font-size: 24px; margin-top: 16px; margin-bottom: 16px;">{{team_member.title || 'Position | Title'}}</h5>
 				    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic; font-size: 24px; margin-top: 16px; margin-bottom: 16px;">Q: What do you find rewarding?</h5>
 				    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[0] || "I'm busy doing just that..."}}</p>
 				    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic; font-size: 24px; margin-top: 16px; margin-bottom: 16px;">Q: What was your first job?</h5>
