--- a/lib/client/app/application/pages/team/partials/team-template.html
+++ b/lib/client/app/application/pages/team/partials/team-template.html
@@ -28,12 +28,12 @@
 
 		<!-- Dialog Component -->
 		<div layout="row" layout-align="center center" layout-wrap ng-attr-style="width: {{window_width}}px; height: {{window_height}}px; position: fixed; top: 0; left: 0; overflow-y: auto; background: rgba(0, 0, 0, 0.7); z-index: 10000;" ng-show="show_dialog">
-			<md-card class="md-whiteframe-6dp" style="position: relative;" flex="100" layout="column" layout-gt-sm="row" layout-wrap>
+			<md-card class="md-whiteframe-6dp" style="position: relative;" flex="100" layout="row" layout-wrap>
 				<i class="material-icons" ng-attr-style="cursor: pointer; position: absolute; top: 16px; right: 16px; color: {{base_hue_darkest.value}};" ng-click="show_dialog = false; team_member = null">close</i>
-				<div flex="100" flex-gt-sm="50">
+				<div flex="100" flex-gt-sm="40">
 	    			<img ng-src="{{team_member.source || '/assets/design/missing-person-image.gif'}}" class="md-card-image" alt="Team member {{team_member.name}}" style="height: 100%; width: auto;">
 	    		</div>
-	    		<div flex="100" flex-gt-sm="50" layout="row" layout-align="center center">
+	    		<div flex="100" flex-gt-sm="60" layout="row" layout-align="center center" ng-attr-style="background-color: {{base_hue_lightest.value}};">
 	    			<div>
 	    				<h5 ng-attr-style="color: {{base_hue_darkest.value}}; font-size: 24px; margin-top: 16px; margin-bottom: 16px; font-weight: normal;">{{team_member.name || 'Team Member\'s Name'}}</h5>
 			    		<h5 ng-attr-style="color: {{base_hue_darkest.value}}; font-size: 24px; margin-top: 16px; margin-bottom: 16px; font-weight: normal;">{{team_member.title || 'Position | Title'}}</h5>
