google tag manager

--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -31,9 +31,9 @@
 			</div>
 			<div layout-padding flex="100" flex-sm="25" flex-gt-sm="25">
 				<md-list>
-					<md-list-item>
+<!-- 					<md-list-item>
 						<p ng-attr-style="font-weight: bold; color: {{base_hue_lightest.value}};"></p>
-					</md-list-item>
+					</md-list-item> -->
 					<md-list-item>
 						<a href="/spotlight/planning"><p ng-attr-style="color: {{base_hue_lightest.value}};">Planning</p></a>
 					</md-list-item>
