added instagram icon

--- a/lib/client/app/application/partials/navigation-menu.html
+++ b/lib/client/app/application/partials/navigation-menu.html
@@ -26,6 +26,7 @@
             	<a href="https://facebook.com/mmatexas"><img class="navigation icons" src="media/facebook.png"></a>
                 <a href="https://twitter.com/mma_texas"><img class="navigation icons" src="media/twitter.png"></a>
                 <a href="https://linkedin.com/company/mmatexas"><img class="navigation icons" src="media/linkedin.png"></a>
+                <a href="https://www.instagram.com/mmatexas/"><img class="navigation icons" src="media/instagram-mma-green.png"></a>
             </div>
         </div>
     </div>
