open socia media links new tab

--- a/lib/client/app/application/partials/navigation-menu.html
+++ b/lib/client/app/application/partials/navigation-menu.html
@@ -23,10 +23,10 @@
     <div class="navigation social md-whiteframe-8dp" layout="row" layout-align="start center" flex="100">
         <div layout="row" layout-align="start center" flex="100" style="margin-left: 24px;">
             <div flex="100" flex-gt-sm="50" layout-align="start center">
-            	<a href="https://facebook.com/mmatexas"><img class="navigation icons" src="media/facebook.png"></a>
-                <a href="https://twitter.com/mma_texas"><img class="navigation icons" src="media/twitter.png"></a>
-                <a href="https://linkedin.com/company/mmatexas"><img class="navigation icons" src="media/linkedin.png"></a>
-                <a href="https://www.instagram.com/mmatexas/"><img class="navigation icons" src="media/instagram-mma-green.png"></a>
+            	<a target="_blank" href="https://facebook.com/mmatexas"><img class="navigation icons" src="media/facebook.png"></a>
+                <a target="_blank" href="https://twitter.com/mma_texas"><img class="navigation icons" src="media/twitter.png"></a>
+                <a target="_blank" href="https://linkedin.com/company/mmatexas"><img class="navigation icons" src="media/linkedin.png"></a>
+                <a target="_blank" href="https://www.instagram.com/mmatexas/"><img class="navigation icons" src="media/instagram-mma-green.png"></a>
             </div>
         </div>
     </div>
@@ -126,10 +126,10 @@
     <div class="navigation social md-whiteframe-8dp" layout="row" layout-align="start center" flex="100">
         <div layout="row" layout-align="start center" flex="100" style="margin-left: 24px;">
             <div flex="100" flex-gt-sm="50" layout-align="start center">
-                <a href="https://facebook.com/mmatexas"><img class="navigation icons" src="media/facebook.png"></a>
-                <a href="https://twitter.com/mma_texas"><img class="navigation icons" src="media/twitter.png"></a>
-                <a href="https://linkedin.com/company/mmatexas"><img class="navigation icons" src="media/linkedin.png"></a>
-                <a href="https://www.instagram.com/mmatexas/"><img class="navigation icons" src="media/instagram-mma-green.png"></a>
+                <a target="_blank" href="https://facebook.com/mmatexas"><img class="navigation icons" src="media/facebook.png"></a>
+                <a target="_blank" href="https://twitter.com/mma_texas"><img class="navigation icons" src="media/twitter.png"></a>
+                <a target="_blank" href="https://linkedin.com/company/mmatexas"><img class="navigation icons" src="media/linkedin.png"></a>
+                <a target="_blank" href="https://www.instagram.com/mmatexas/"><img class="navigation icons" src="media/instagram-mma-green.png"></a>
             </div>
         </div>
     </div>
