--- a/lib/client/app/application/pages/resource/partials/resource-template.html
+++ b/lib/client/app/application/pages/resource/partials/resource-template.html
@@ -14,7 +14,7 @@
 
 	    <div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
 			
-			<md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="z-index: 1; min-height: 800px; background-color: {{base_hue_lightest.value}}; padding: 0; position: relative;">
+			<md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="100" layout-align="start start" ng-attr-style="z-index: 1; min-height: calc({{window_height}} - 100px); background-color: {{base_hue_lightest.value}}; padding: 0; position: relative;">
 				
 				<div layout="row" layout-align="center center" layout-wrap>
 					<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2;">
