loading - content available directive

--- a/lib/client/app/application/pages/resource/partials/resource-template.html
+++ b/lib/client/app/application/pages/resource/partials/resource-template.html
@@ -20,7 +20,7 @@
 					<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2;">
 						<div layout-wrap layout="row" layout-align="start center" flex>
 							<div flex style="margin-bottom: -5px; position: relative;" layout-align="end center">
-								<iframe ng-src="{{trusted_resource_iframe}}" width="{{window_width}}" height="{{window_height}}" frameborder="0" ng-attr-style="border:0; width: {{window_width}}px; height: {{window_height}}px" allowfullscreen></iframe>
+								<iframe content-available ng-src="{{trusted_resource_iframe}}" width="{{window_width}}" height="{{window_height}}" frameborder="0" ng-attr-style="border:0; width: {{window_width}}px; height: {{window_height}}px" allowfullscreen></iframe>
 							</div>
 						</div>
 					</div>
