--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -48,7 +48,10 @@
 
 			<div class="md-whiteframe-8dp sidebar form" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="25" layout-align="start start" ng-attr-style="z-index: 1; min-height: 200px; background-color: {{base_hue_lightest.value}}; margin-top: 8px; padding: 0;">
 				<md-card ng-attr-style="background: {{base_hue_lightest.value}}; width: 100%; position: relative; margin: 0;">
-	                <form name="project">
+					<div style="text-align: center">
+						<div ng-include ng-show="progressAnimation" src="'application/partials/loading-spinner.html'"></div>
+					</div>
+	                <form name="project" ng-show="!progressAnimation">
 	                	<div style="text-align: left; padding-left: 16px; border-left: 4px solid {{primary_hue_normal.value}}; box-sizing: border-box;">
 	                		<h1 style="color: {{primary_hue_normal.value}};">Contact mma Today!</h1>
 	                	</div>
