--- a/lib/client/app/application/partials/loading-spinner.html
+++ b/lib/client/app/application/partials/loading-spinner.html
@@ -10,6 +10,7 @@
 }
 .loader {
   color: {{primary_hue_normal.value}};
+  height: 100px!important;
   text-indent: -9999em;
   margin: 88px auto;
   position: relative;
