--- a/lib/client/app/application/pages/authentication/partials/login.html
+++ b/lib/client/app/application/pages/authentication/partials/login.html
@@ -13,13 +13,11 @@
 		<!-- header -->
 
 		<div layout="row" layout-align="center center">
-			<div flex="80" flex-sm="90" flex-gt-sm="90" style="text-align: center;">
-				<img src="{{settings.data.logo}}" style="width: 300px; height: auto;"" ng-cloak="true">
-			</div>
-			<div flex="90" flex-sm="90" flex-gt-sm="80" style="text-align: center">
-				<div ng-include ng-show="progressAnimation" src="'application/partials/loading-spinner.html'"></div>
-			</div>
 			<div flex="80" flex-sm="60" flex-gt-sm="40" style="margin-top: 64px;">
+				<div style="width: 100%; text-align: center;">
+					<img src="{{settings.data.logo}}" style="width: 300px; height: auto;" ng-cloak="true">
+				</div>
+				<div ng-include ng-show="progressAnimation" src="'application/partials/loading-spinner.html'"></div>
 				<form name="login" autocomplete="nope" ng-show="!progressAnimation">
 					<md-content>
 						<md-list-item>
