login -- forgot password

--- a/lib/client/app/application/pages/authentication/partials/login.html
+++ b/lib/client/app/application/pages/authentication/partials/login.html
@@ -42,9 +42,9 @@
 						</md-list-item>
 						<div layout-padding layout="row" layout-align="end center">
 							<div>
-								<md-button style="background: transparent;">
+								<!-- <md-button style="background: transparent;">
 								Forgot Password
-								</md-button>
+								</md-button> -->
 								<md-button class="md-raised" style="background: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" ng-click="signIn()">
 								Login
 								</md-button>
