--- a/lib/client/app/application/pages/team/partials/team-template.html
+++ b/lib/client/app/application/pages/team/partials/team-template.html
@@ -7,6 +7,14 @@
 .header-ms-explorer {position: fixed; width: 100%;}
 .team-member-popup-image {height: auto!important; width: 100%!important;}
 .team-member-image-popup-desktop {height: 100%; width: auto;}
+
+.team_member_picture.hovered {opacity: .9; filter: none;}
+.team_member_picture {
+	filter: grayscale(100%);
+	transition-duration: .3s;
+    transition-timing-function: cubic-bezier(.4,0,.2,1);
+    transition-property: filter, opacity;
+}
 </style>
 <md-content class="page spotlight" style="height: {{window_height}}px">
 	<section style="background: {{base_hue_lighter.value}}">
@@ -24,7 +32,7 @@
 				<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Our People</h1>
 			</div>
 	    	<md-card class="md-whiteframe-6dp" flex="100" flex-sm="33" flex-gt-sm="30" ng-repeat="member in settings.staff.members" ng-click="select_member(member);">
-	    		<img ng-src="{{member.source || '/assets/design/missing-person-image.gif'}}" class="md-card-image" alt="Team Member {{member.name}}">
+	    		<img ng-src="{{member.source || '/assets/design/missing-person-image.gif'}}" class="md-card-image team_member_picture" alt="Team Member {{member.name}}" ng-class="{'hovered': hovered}" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
 	    	</md-card>
 		</div>
 
