--- a/lib/client/app/stylesheets/lightweight.css
+++ b/lib/client/app/stylesheets/lightweight.css
@@ -11,8 +11,8 @@
 .mediaVault .suite-dialog > md-card-title {max-height: 64px; min-height: 64px;}
 .userVault .suite-dialog > md-card-title {max-height: 64px; min-height: 64px;}
 }
-.suite-dialog > md-card-title {min-height: 84px;}
-.userVault .suite-dialog > md-card-title, .mediaVault .suite-dialog > md-card-title, .blogVault .suite-dialog > md-card-title {min-height: 84px;}
+.suite-dialog > md-card-title {height: 84px; box-sizing: border-box;}
+.userVault .suite-dialog > md-card-title, .mediaVault .suite-dialog > md-card-title, .blogVault .suite-dialog > md-card-title {height: 84px; box-sizing: border-box;}
 .dialog-curtain,
 .suite-dialog, .secondary-dialog-curtain, .tertiary-dialog-curtain {position: fixed; top: 0; left: 0; right: 0; bottom: 0; overflow: hidden; margin:0!important;}
 /* ============================== Curtain ============================== */
