--- a/lib/client/app/stylesheets/lightweight.css
+++ b/lib/client/app/stylesheets/lightweight.css
@@ -11,10 +11,19 @@
 .mediaVault .suite-dialog > md-card-title {max-height: 64px; min-height: 64px;}
 .userVault .suite-dialog > md-card-title {max-height: 64px; min-height: 64px;}
 }
-.suite-dialog > md-card-title {height: 84px; box-sizing: border-box;}
-.userVault .suite-dialog > md-card-title, .mediaVault .suite-dialog > md-card-title, .blogVault .suite-dialog > md-card-title {height: 84px; box-sizing: border-box;}
 .dialog-curtain,
 .suite-dialog, .secondary-dialog-curtain, .tertiary-dialog-curtain {position: fixed; top: 0; left: 0; right: 0; bottom: 0; overflow: hidden; margin:0!important;}
+
+	@media screen and (min-width: 840px) {
+	    .suite-dialog > md-card-title {max-height: 84px; box-sizing: border-box;}
+		.userVault .suite-dialog > md-card-title, .mediaVault .suite-dialog > md-card-title, 
+		.blogVault .suite-dialog > md-card-title {max-height: 84px; box-sizing: border-box;}
+	}
+	@media screen and (max-width: 839px) {
+	    .suite-dialog > md-card-title {max-height: 168px; box-sizing: border-box;}
+		.userVault .suite-dialog > md-card-title, .mediaVault .suite-dialog > md-card-title, 
+		.blogVault .suite-dialog > md-card-title {max-height: 168px; box-sizing: border-box;}
+	}
 /* ============================== Curtain ============================== */
 
 /* ============================== dialogs ============================== */
