--- a/lib/client/app/stylesheets/lightweight.css
+++ b/lib/client/app/stylesheets/lightweight.css
@@ -5,7 +5,7 @@
 .secondary-dialog-curtain {z-index: 22;}
 .tertiary-dialog-curtain {z-index: 23;}
 @media screen and (max-width: 839px) {
-.suite-dialog {position: relative!important; width: 100%; margin:0!important;}
+.suite-dialog {position: relative!important; width: calc(100% - 300px); margin:0!important;}
 .dialog-curtain, .secondary-dialog-curtain, .tertiary-dialog-curtain {overflow-y: scroll!important;}
 .suite-dialog > md-card-title {min-height: 150px;}
 .mediaVault .suite-dialog > md-card-title {max-height: 64px; min-height: 64px;}
@@ -23,6 +23,7 @@
 	    .suite-dialog > md-card-title {max-height: 168px; box-sizing: border-box;}
 		.userVault .suite-dialog > md-card-title, .mediaVault .suite-dialog > md-card-title, 
 		.blogVault .suite-dialog > md-card-title {max-height: 168px; box-sizing: border-box;}
+		.suite-dialog {width: 100%; margin:0!important;}
 	}
 /* ============================== Curtain ============================== */
 
