--- a/lib/client/app/application/partials/backend-menu.html
+++ b/lib/client/app/application/partials/backend-menu.html
@@ -9,6 +9,7 @@
         <md-icon style="color: {{base_hue_lightest.value}};" aria-label="Remove Task" md-font-library="material-icons">lock_open</md-icon>&nbsp;&nbsp;&nbsp;Sign Out
         </md-button>
     </md-list-item>
+    <span style="height:48px; width: 100%;" flex="100"></span>
     <md-list-item flex="100" ng-click="closeAllApps(); open_edit_configuration()">
         <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer; margin-left: 16px; margin-right: 16px;" aria-label="Remove Task" md-font-library="material-icons">settings</md-icon>
         <span style="color: {{base_hue_darkest.value}}; font-size: 18px;">Settings</span>
