--- a/lib/client/app/application/partials/backend-menu.html
+++ b/lib/client/app/application/partials/backend-menu.html
@@ -5,7 +5,7 @@
         <span style="color: {{base_hue_darkest.value}}; font-size: 18px;">{{me.firstname}} {{me.lastname}}</span>
     </md-list-item>
     <md-list-item class="menu button" flex="100">
-        <md-button ng-confirm-message="Are you sure you want to exit and go to your Vault?" ng-confirm-click="openMyVault()" ng-confirm-condition="true" class="md-raised lightweight-round" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; width: 100%;">
+        <md-button ng-confirm-message="Are you sure you want to exit and go to your Vault?" ng-confirm-click="closeAllApps(); openMyVault()" ng-confirm-condition="true" class="md-raised lightweight-round" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; width: 100%;">
         <md-icon style="color: {{base_hue_lightest.value}};" aria-label="Remove Task" md-font-library="material-icons">person</md-icon>&nbsp;&nbsp;&nbsp;My Vault
         </md-button>
     </md-list-item>
