--- a/lib/client/app/application/pages/info/partials/info-template.html
+++ b/lib/client/app/application/pages/info/partials/info-template.html
@@ -36,7 +36,7 @@
 			    	<div ng-repeat="content in infoPage.data.page.contents" flex="100">
 			    		<h1 class="h1 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px;"></h1>
 						<p class="base-hdst--text" ng-if="content.type == 'text'" ng-bind-html="content.data"></p>
-						<p class="base-hdst--text" ng-repeat="listItem in content.data track by $index" ng-if="content.type == 'list'">&bull;&nbsp;&nbsp;{{listItem.item}}</p>
+						<p class="base-hdst--text" ng-repeat="list in content.data track by $index" ng-if="content.type == 'list'">&bull;&nbsp;&nbsp;{{list.item}}</p>
 						<div class="mdl-grid full-width no-padding">
 							<!-- panel images -->
 								<md-card ng-cloak class="lightweight-card-image md-whiteframe-2dp" ng-if="content.type == 'image'" ng-attr-style="position: relative;">
